array.island.Island.scala.error
Erreur de compilation :
Island:21: error: value :: is not a member of Int
    if ( i != n){ L::liste(i)}
                   ^Island:38: error: not found: value ind
    if (num(ind-1)==num(ind)){
            ^Island:38: error: not found: value ind
    if (num(ind-1)==num(ind)){
                        ^Island:36: error: type mismatch;
 found   : Unit
 required: Int
  while(max(num)(0) != 0){
  ^