array.island.Island.scala.code

def max(liste:Array[Int]):Array[Int]={
  
  var max:Array[Int]=Array(liste(0),0)
  
  
  for(i <- 1 to liste.length -1){
   			if( max(0) < liste(i) ){
          max=Array(liste(i),i)}
    		
  }
  return max;
  
}

//fonction enlevant le n? terme de la liste
def enleve(liste:Array[Int],n:Int):Array[Int]={
  var L:Array[Int]=Array();
  for(i <- 1 to liste.length-1){
    if ( i != n){ L::liste(i)}
    
  }
  return L
  
}


def island(num:Array[Int]): Int = {
	
  if (num.length == 0){return 0}
  var ma:Int=max(num)(0)
  var in:Int=max(num)(1)
  
  
  while(max(num)(0) != 0){
    
    if (num(ind-1)==num(ind)){
      
    }
   
  }  
  
  
  
  
  
 
  
}